# atividade_ADC

./: CMakeLists.txt  README.md  atividade_ADC.c  diagram.json  wokwi.toml
include/: font.h
